--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Sujith M S</title>
     <meta charset="UTF-8">
-    <meta name="description" content="<a href="https://www.iiserpune.ac.in/">Indian Institute of Science Education and Research (IISER), Pune </a>">.
+    <meta name="description" content="<a href="https://www.iiserpune.ac.in/">Indian Institute of Science Education and Research (IISER), Pune <br> Dr. Homi Bhabha Road, Pashan, Pune, Maharashtra <br> INDIA - 411008</a>">.
   </head>
   
   <p style="text-align:left;">  
