--- a/404.html
+++ b/404.html
@@ -1,3 +1,5 @@
+ <link rel="stylesheet" type = "text/css" href="./assests/css/404.css">
+
 <div class="noise"></div>
 <div class="overlay"></div>
 <div class="terminal">
