--- a/404.html
+++ b/404.html
@@ -1,135 +1,147 @@
 <style>
-@import 'https://fonts.googleapis.com/css?family=Inconsolata';
+$anims: float, floatReverse,float2, floatReverse2;
+$easeSmooth: cubic-bezier(0.39,0.575,0.28,0.995);
+$color: #595959;
 
-html {
-  min-height: 100%;
+body {margin: 0;font-size: 20px;}
+* {box-sizing: border-box;}
+
+.container {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	background: white;
+	color: black;
+	font-family: arial, sans-serif;
+	overflow: hidden;
 }
 
-body {
-  box-sizing: border-box;
-  height: 100%;
-  background-color: #000000;
-  background-image: radial-gradient(#11581E, #041607), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  font-family: 'Inconsolata', Helvetica, sans-serif;
-  font-size: 1.5rem;
-  color: rgba(128, 255, 128, 0.8);
-  text-shadow:
-      0 0 1ex rgba(51, 255, 51, 1),
-      0 0 2px rgba(255, 255, 255, 0.8);
+.content {
+	position: relative;
+	width: 600px;
+	max-width: 100%;
+	margin: 20px;
+	background: white;
+	padding: 60px 40px;
+	text-align: center;
+	box-shadow: -10px 10px 67px -12px rgba(0,0,0,0.2);
+	opacity: 0; 
+	animation: apparition 0.8s 1.2s $easeSmooth forwards;
+	
+	p {
+		font-size: 1.3rem;
+		margin-top: 0;
+		margin-bottom: 0.6rem;
+		letter-spacing: 0.1rem;
+		color: $color;
+		
+		&:last-child{margin-bottom: 0;}
+	}
+	
+	button {
+		display: inline-block;
+		margin-top: 2rem;
+		padding: 0.5rem 1rem;
+		border: 3px solid $color;
+		background: transparent;
+		font-size: 1rem;
+		color: $color;
+		text-decoration: none;
+		cursor: pointer;
+		font-weight: bold;
+	}
 }
 
-.noise {
-  pointer-events: none;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: -1;
-  opacity: .02;
+.particle {
+	position: absolute;
+	display: block;
+	pointer-events: none;
+	
+	@for $i from 1 through 80 {
+		&:nth-child(#{$i}){
+			$size: random(20) + 10;
+			$blur: $i * 0.02;
+			$speed: random(20)+20; 
+			$delay: random(10)*0.1;
+			$anim: nth($anims, random(length($anims)));
+			
+			top: random(100) / (100 + $size/8) * 100%;
+			left: random(100) / (100 + $size/10) * 100%;
+			font-size: $size + px;
+			filter: blur( (#{$blur}) + px);
+			animation: $speed+s  $anim infinite;
+		}
+	}
 }
 
-.overlay {
-  pointer-events: none;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background:
-      repeating-linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0) 0,
-      rgba(0, 0, 0, 0.3) 50%,
-      rgba(0, 0, 0, 0) 100%);
-  background-size: auto 4px;
-  z-index: 1;
+@keyframes apparition {
+	from {
+		opacity: 0;
+		transform: translateY(100px);
+	}
+	
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
 
-.overlay::before {
-  content: "";
-  pointer-events: none;
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(
-      0deg,
-      transparent 0%,
-      rgba(32, 128, 32, 0.2) 2%,
-      rgba(32, 128, 32, 0.8) 3%,
-      rgba(32, 128, 32, 0.2) 3%,
-      transparent 100%);
-  background-repeat: no-repeat;
-  animation: scan 7.5s linear 0s infinite;
+@keyframes float {
+  0%,100% {
+    transform: translateY(0);
+	}
+  50% {
+    transform: translateY(180px);
+	}
 }
 
-@keyframes scan {
-  0%        { background-position: 0 -100vh; }
-  35%, 100% { background-position: 0 100vh; }
+@keyframes floatReverse {
+  0%,100% {
+    transform: translateY(0);
+	}
+  50% {
+    transform: translateY(-180px);
+  }
+}
+	
+@keyframes float2 {
+  0%,100% {
+    transform: translateY(0);
+	}
+  50% {
+    transform: translateY(28px);
+	}
 }
 
-.terminal {
-  box-sizing: inherit;
-  position: absolute;
-  height: 100%;
-  width: 1000px;
-  max-width: 100%;
-  padding: 4rem;
-  text-transform: uppercase;
+@keyframes floatReverse2 {
+  0%,100% {
+    transform: translateY(0);
+	}
+  50% {
+    transform: translateY(-28px);
+	}
 }
 
-.output {
-  color: rgba(128, 255, 128, 0.8);
-  text-shadow:
-      0 0 1px rgba(51, 255, 51, 0.4),
-      0 0 2px rgba(255, 255, 255, 0.8);
-}
-
-.output::before {
-  content: "> ";
-}
-
-/*
-.input {
-  color: rgba(192, 255, 192, 0.8);
-  text-shadow:
-      0 0 1px rgba(51, 255, 51, 0.4),
-      0 0 2px rgba(255, 255, 255, 0.8);
-}
-.input::before {
-  content: "$ ";
-}
-*/
-
-a {
-  color: #fff;
-  text-decoration: none;
-}
-
-a::before {
-  content: "[";
-}
-
-a::after {
-  content: "]";
-}
-
-.errorcode {
-  color: white;
+@mixin animation ($delay, $duration, $animation) {
+  animation-delay: $delay;
+  animation-duration: $duration;
+  animation-name: $animation;
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
 }
 </style>
 
-<div class="noise"></div>
-<div class="overlay"></div>
-<div class="terminal">
-  <h1>Error <span class="errorcode">404</span></h1>
-  <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
-  <p class="output">Please try to <a href="https://mssujith.github.io/">return to the homepage</a>.</p>
-  <p class="output">Good luck.</p>
-</div>
+%main.container
+	- (1..40).each do |i|
+		%span.particle 4
+	
+	- (1..40).each do |i|
+		%span.particle 0
+		
+	%article.content
+		%p Damnit stranger,
+		%p You got lost in the <strong>404</strong> galaxy.
+		%p
+			%button Go back to earth.
