--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@ body {
   box-sizing: inherit;
   position: absolute;
   height: 100%;
-  width: 1000px;
+  width: 100%;
   max-width: 100%;
   padding: 4rem;
   text-transform: uppercase;
