--- a/404.html
+++ b/404.html
@@ -8,6 +8,8 @@ html {
 body {
   box-sizing: border-box;
   height: 100%;
+  transform: scale(1); 
+  transform-origin: 0 0;
   background-color: #000000;
   background-image: radial-gradient(#000000, #000000), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
   background-repeat: no-repeat;
