--- a/404.html
+++ b/404.html
@@ -14,9 +14,9 @@ body {
   background-image: radial-gradient(#000000, #000000), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: Georgia, serif;
+  font-family: Times, serif;
   font-size: 1.5rem;
-  color: rgba(255, 50, 50, 0.8);
+  color: #b5e853;
   text-shadow:
       0 0 1ex rgba(255, 51, 51, 1),
       0 0 2px rgba(255, 255, 255, 0.8);
@@ -81,7 +81,7 @@ body {
   position: absolute;
   height: 100%;
   width: 100%;
-  max-width: 100%;
+  max-width: 1000px;
   padding: 4rem;
   text-transform: uppercase;
 }
