--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@ body {
   width: 100%;
   max-width: 1000px;
   padding: 4rem;
-  text-transform: uppercase;
+  text-transform: lowecase;
 }
 
 .output {
