--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@ body {
   width: 100%;
   max-width: 1000px;
   padding: 4rem;
-  text-transform: lowecase;
+  text-transform: uppercase;
 }
 
 .output {
@@ -133,7 +133,7 @@ a::after {
 <div class="overlay"></div>
 <div class="terminal">
   <h1>Error <span class="errorcode">404</span></h1>
-  <p class="output">the page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
-  <p class="output">tlease try to <a href="https://mssujith.github.io/">return to the homepage</a>.</p>
+  <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
+  <p class="output">Please try to <a href="https://mssujith.github.io/">return to the homepage</a>.</p>
   <p class="output"></p> 
 </div>
