--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@ body {
 .overlay::before {
   content: "";
   pointer-events: none;
-  position: center;
+  position: relative;
   display: block;
   top: 0;
   left: 0;
@@ -78,12 +78,12 @@ body {
 
 .terminal {
   box-sizing: inherit;
-  position: center;
+  position: relative;
   height: 100%;
   width: 100%;
   max-width: 1000px;
   padding: 4rem;
-  text-transform: uppercase;
+  text-transform: none;
 }
 
 .output {
@@ -133,7 +133,7 @@ a::after {
 <div class="overlay"></div>
 <div class="terminal">
   <h1>Error <span class="errorcode">404</span></h1>
-  <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
-  <p class="output">Please try to <a href="https://mssujith.github.io/">return to the homepage</a>.</p>
+  <p class="output">the page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
+  <p class="output">please try to <a href="https://mssujith.github.io/">return to the homepage</a>.</p>
   <p class="output"></p> 
 </div>
