--- a/404.html
+++ b/404.html
@@ -5,6 +5,16 @@ html {
   min-height: 100%;
 }
 
+.parent{
+  position: relative;
+}
+.child{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+  
 body {
   box-sizing: border-box;
   height: 80%;
@@ -53,6 +63,7 @@ body {
   content: "";
   pointer-events: none;
   position: relative;
+  padd
   display: block;
   top: 0;
   left: 0;
