--- a/404.html
+++ b/404.html
@@ -5,15 +5,6 @@ html {
   min-height: 100%;
 }
 
-.parent{
-  position: relative;
-}
-.child{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
   
 body {
   box-sizing: border-box;
@@ -49,6 +40,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  padding: 200px
   background:
       repeating-linear-gradient(
       180deg,
@@ -71,6 +63,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 100%;
+  padding: 200px
   background-image: linear-gradient(
       0deg,
       transparent 0%,
