--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  padding: 200px
+  padding: 200px;
   background:
       repeating-linear-gradient(
       180deg,
@@ -63,7 +63,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 100%;
-  padding: 200px
+  padding: 200px;
   background-image: linear-gradient(
       0deg,
       transparent 0%,
