--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  padding: 200px;
+  padding-left: 400px;
   background:
       repeating-linear-gradient(
       180deg,
