--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@ body {
 .overlay::before {
   content: "";
   pointer-events: none;
-  position: relative;
+  position: absolute;
   padd
   display: block;
   top: 0;
@@ -82,11 +82,11 @@ body {
 
 .terminal {
   box-sizing: inherit;
-  position: relative;
+  position: absolute;
   height: 100%;
   width: 100%;
   max-width: 1000px;
-  padding: 200px;
+  padding-left: 400px;
   text-transform: none;
 }
 
