--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  padding-left: 400px;
+/*  padding-left: 400px; */
   background:
       repeating-linear-gradient(
       180deg,
@@ -63,7 +63,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 100%;
-  padding: 400px;
+/*  padding: 400px; */
   background-image: linear-gradient(
       0deg,
       transparent 0%,
@@ -85,8 +85,8 @@ body {
   position: absolute;
   height: 100%;
   width: 100%;
-  max-width: 1000px;
-  padding-left: 400px;
+  max-width: 600px;
+  padding-left: 600px;
   text-transform: none;
 }
 
