--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ body {
   box-sizing: border-box;
   height: 80%;
   transform: scale(1); 
-  transform-origin: 0 0;
+  transform-origin: 0 500;
   background-color: #000000;
   background-image: radial-gradient(#000000, #000000), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
   background-repeat: no-repeat;
@@ -85,8 +85,8 @@ body {
   position: absolute;
   height: 100%;
   width: 100%;
-  max-width: 600px;
-  padding-left: 600px;
+  max-width: 1000px;
+ /* padding-left: 600px; */
   text-transform: none;
 }
 
