--- a/404.html
+++ b/404.html
@@ -86,8 +86,7 @@ body {
   height: 100%;
   width: 100%;
   max-width: 1000px;
-  transform-origin: 500 0;
- /* padding-left: 600px; */
+  padding-left: 600px; 
   text-transform: none;
 }
 
