--- a/404.html
+++ b/404.html
@@ -92,6 +92,7 @@ body {
 
 .output {
   color: #b5e853;
+  font-family: Inconsolata, monospace;
   text-shadow:
       0 0 1px rgba(255, 51, 51, 0.4),
       0 0 2px rgba(255, 255, 255, 0.8);
