--- a/404.html
+++ b/404.html
@@ -28,8 +28,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: radial-gradient(
-    rgba(0, 150, 0, 0.75), black 120%  /*url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");*/
+  background-image: url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
