--- a/404.html
+++ b/404.html
@@ -86,7 +86,7 @@ body {
   height: 100%;
   width: 100%;
   max-width: 1475px;
-  padding-left: 440px; 
+/*  padding-left: 440px; */
   text-transform: none;
 }
 
@@ -136,7 +136,7 @@ a::after {
 
 <div class="noise"></div>
 <div class="overlay"></div>
-<div class="terminal">
+<div class="terminal"> align="center"
   <h1>ERROR <span class="errorcode">404</span></h1>
   <p class="output">the page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
   <p class="output">please try to <a href="https://mssujith.github.io/">return to the homepage</a>.</p>
