--- a/404.html
+++ b/404.html
@@ -136,9 +136,10 @@ a::after {
 
 <div class="noise"></div>
 <div class="overlay"></div>
-<div class="terminal"> align="center"
+<div class="terminal"> 
+  <div> align="center"
   <h1>ERROR <span class="errorcode">404</span></h1>
   <p class="output">the page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
   <p class="output">please try to <a href="https://mssujith.github.io/">return to the homepage</a>.</p>
-  <p class="output"></p> 
+    <p class="output"></p> </div>
 </div>
