--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@ body {
 }
 
 .output {
-  color: #b5e853;
+  color: #53E8B5;
   font-family: Inconsolata, monospace;
   text-shadow:
       0 0 1px rgba(255, 51, 51, 0.4),
