--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@ body {
   background-size: cover;
   font-family: Times, serif;
   font-size: 1.5rem;
-  color: #b5e853;
+  color: #53E8B5;
   text-shadow:
       0 0 1ex rgba(255, 51, 51, 1),
       0 0 2px rgba(255, 255, 255, 0.8);
